<resources>
    <string name="app_name">lab3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_movie_title">Movie title</string>
    <string name="hint_release_year">Release year</string>
    <string name="fragment_first_title">Search OMDB</string>
    <string name="fragment_first_subtitle">MOVIES</string>
    <string name="recycler_view_movie_poster">MOVIE POSTER IMAGE</string>
    <string name="placeholder_movie_id">MOVIE ID</string>
    <string name="placeholder_movie_director">MOVIE DIRECTOR</string>
    <string name="placeholder_movie_plot">THE SHORT PLOT</string>
    <string name="placeholder_actors" >ACTORS</string>
    <string name="placeholder_genres">GENRES</string>
</resources>