<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/rcv_img_movie_poster"
        android:layout_width="98dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/recycler_view_movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/rcv_txt_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_movie_title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/rcv_img_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/rcv_img_movie_poster" />

    <TextView
        android:id="@+id/rcv_txt_movie_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/hint_release_year"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/rcv_img_movie_poster"
        app:layout_constraintStart_toStartOf="@+id/rcv_txt_movie_title" />

    <Button
        android:id="@+id/row_btn_remove_movie"
        android:layout_width="43dp"
        android:layout_height="32dp"
        android:layout_marginStart="170dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="@+id/rcv_txt_movie_title"
        app:layout_constraintTop_toTopOf="@+id/rcv_img_movie_poster" />
</androidx.constraintlayout.widget.ConstraintLayout>